# RTv1

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  RTv1  RTv1.h  author  env.mk  ft_vulkan.h  main.c  oscheck.mk  scene.rtv  settings.mk  vulkan.mk
SDL/.hg/: dirstate
SDL/.hg/cache/: branch2-base  hgtagsfnodes1
SDL/.hg/store/: 00changelog.d  00changelog.i  00manifest.i  fncache  undo
SDL/.hg/store/data/: _android.mk.i  _c_make_lists.txt.i  _makefile.in.i  _makefile.os2.i  _whats_new.i  configure.ac.i  configure.d  configure.i  docs.html.i  sdl2-config.cmake.in.i
SDL/.hg/store/data/_visual_c-_win_r_t/_u_w_p___v_s2015/: _s_d_l-_u_w_p.vcxproj.filters.i  _s_d_l-_u_w_p.vcxproj.i
SDL/.hg/store/data/_visual_c-_win_r_t/_win_phone81___v_s2013/: _s_d_l-_win_phone81.vcxproj.filters.i  _s_d_l-_win_phone81.vcxproj.i
SDL/.hg/store/data/_visual_c-_win_r_t/_win_r_t81___v_s2013/: _s_d_l-_win_r_t81.vcxproj.filters.i  _s_d_l-_win_r_t81.vcxproj.i
SDL/.hg/store/data/_visual_c/_s_d_l/: _s_d_l.vcxproj.filters.i  _s_d_l.vcxproj.i
SDL/.hg/store/data/_xcode-i_o_s/_s_d_l/_s_d_l.xcodeproj/: project.pbxproj.i
SDL/.hg/store/data/_xcode-i_o_s/_test/_testi_phone_o_s.xcodeproj/: project.pbxproj.i
SDL/.hg/store/data/_xcode/_s_d_l/_s_d_l.xcodeproj/: project.pbxproj.d  project.pbxproj.i
SDL/.hg/store/data/cmake/: sdlchecks.cmake.i
SDL/.hg/store/data/include/: _s_d_l.h.i  _s_d_l__config.h.cmake.i  _s_d_l__config.h.in.i  _s_d_l__config__android.h.i  _s_d_l__config__iphoneos.h.i  _s_d_l__config__macosx.h.i  _s_d_l__config__os2.h.i  _s_d_l__config__pandora.h.i  _s_d_l__config__psp.h.i  _s_d_l__config__windows.h.i  _s_d_l__config__winrt.h.i  _s_d_l__config__wiz.h.i  _s_d_l__cpuinfo.h.i  _s_d_l__events.h.i  _s_d_l__haptic.h.i  _s_d_l__hints.h.i  _s_d_l__metal.h.i  _s_d_l__opengl.h.d  _s_d_l__opengl.h.i  _s_d_l__pixels.h.i  _s_d_l__sensor.h.i  _s_d_l__stdinc.h.i  _s_d_l__thread.h.i  _s_d_l__video.h.d  _s_d_l__video.h.i
SDL/.hg/store/data/src/: _s_d_l__error.c.i  _s_d_l__error__c.h.i  _s_d_l__internal.h.i
SDL/.hg/store/data/src/audio/: _s_d_l__audiodev.c.i  _s_d_l__wave.c.i
SDL/.hg/store/data/src/audio/alsa/: _s_d_l__alsa__audio.c.i
SDL/.hg/store/data/src/audio/coreaudio/: _s_d_l__coreaudio.h.i  _s_d_l__coreaudio.m.i
SDL/.hg/store/data/src/audio/disk/: _s_d_l__diskaudio.c.i
SDL/.hg/store/data/src/audio/emscripten/: _s_d_l__emscriptenaudio.c.i
SDL/.hg/store/data/src/audio/netbsd/: _s_d_l__netbsdaudio.c.i
SDL/.hg/store/data/src/audio/pulseaudio/: _s_d_l__pulseaudio.c.i
SDL/.hg/store/data/src/audio/sndio/: _s_d_l__sndioaudio.c.i
SDL/.hg/store/data/src/audio/wasapi/: _s_d_l__wasapi.c.i  _s_d_l__wasapi__win32.c.i  _s_d_l__wasapi__winrt.cpp.i
SDL/.hg/store/data/src/core/android/: _s_d_l__android.c.i  _s_d_l__android.h.i
SDL/.hg/store/data/src/core/linux/: _s_d_l__dbus.c.i  _s_d_l__dbus.h.i  _s_d_l__threadprio.c.i
SDL/.hg/store/data/src/core/winrt/: _s_d_l__winrtapp__direct3d.cpp.i
SDL/.hg/store/data/src/dynapi/: _s_d_l__dynapi__overrides.h.i  _s_d_l__dynapi__procs.h.i
SDL/.hg/store/data/src/events/: _s_d_l__events.c.i  _s_d_l__events__c.h.i  _s_d_l__keyboard.c.i  _s_d_l__keyboard__c.h.i  _s_d_l__mouse.c.i
SDL/.hg/store/data/src/filesystem/cocoa/: _s_d_l__sysfilesystem.m.i
SDL/.hg/store/data/src/haptic/darwin/: _s_d_l__syshaptic.c.i
SDL/.hg/store/data/src/haptic/linux/: _s_d_l__syshaptic.c.i
SDL/.hg/store/data/src/haptic/windows/: _s_d_l__dinputhaptic.c.i
SDL/.hg/store/data/src/hidapi/windows/: hid.c.i
SDL/.hg/store/data/src/joystick/: _s_d_l__gamecontroller.c.i  _s_d_l__gamecontrollerdb.h.i  _s_d_l__joystick.c.i  _s_d_l__joystick__c.h.i  _s_d_l__sysjoystick.h.i  controller__type.h.i  usb__ids.h.i
SDL/.hg/store/data/src/joystick/android/: _s_d_l__sysjoystick.c.i
SDL/.hg/store/data/src/joystick/bsd/: _s_d_l__sysjoystick.c.i
SDL/.hg/store/data/src/joystick/darwin/: _s_d_l__sysjoystick.c.i  _s_d_l__sysjoystick__c.h.i
SDL/.hg/store/data/src/joystick/dummy/: _s_d_l__sysjoystick.c.i
SDL/.hg/store/data/src/joystick/emscripten/: _s_d_l__sysjoystick.c.i
SDL/.hg/store/data/src/joystick/haiku/: _s_d_l__haikujoystick.cc.i
SDL/.hg/store/data/src/joystick/hidapi/: _s_d_l__hidapi__gamecube.c.i  _s_d_l__hidapi__ps4.c.i  _s_d_l__hidapi__steam.c.i  _s_d_l__hidapi__switch.c.i  _s_d_l__hidapi__xbox360.c.i  _s_d_l__hidapi__xbox360w.c.i  _s_d_l__hidapi__xboxone.c.i  _s_d_l__hidapijoystick.c.i  _s_d_l__hidapijoystick__c.h.i
SDL/.hg/store/data/src/joystick/iphoneos/: _s_d_l__sysjoystick.m.i
SDL/.hg/store/data/src/joystick/linux/: _s_d_l__sysjoystick.c.d  _s_d_l__sysjoystick.c.i
SDL/.hg/store/data/src/joystick/riscos/: _s_d_l__sysjoystick.c.i
SDL/.hg/store/data/src/render/: _s_d_l__render.c.i  _s_d_l__sysrender.h.i
SDL/.hg/store/data/src/sensor/: _s_d_l__sensor.c.i  _s_d_l__syssensor.h.i
SDL/.hg/store/data/src/stdlib/: _s_d_l__getenv.c.i  _s_d_l__stdlib.c.i
SDL/.hg/store/data/src/test/: _s_d_l__test__assert.c.i  _s_d_l__test__harness.c.i
SDL/.hg/store/data/src/thread/: _s_d_l__systhread.h.i  _s_d_l__thread.c.i  _s_d_l__thread__c.h.i
SDL/.hg/store/data/src/video/: _s_d_l__blit___n.c.d  _s_d_l__blit___n.c.i  _s_d_l__bmp.c.i  _s_d_l__egl.c.i  _s_d_l__egl__c.h.i  _s_d_l__pixels.c.i  _s_d_l__pixels__c.h.i  _s_d_l__surface.c.i  _s_d_l__sysvideo.h.i  _s_d_l__video.c.d  _s_d_l__video.c.i  _s_d_l__vulkan__utils.c.i
SDL/.hg/store/data/test/: configure.d  configure.i  controllermap.c.i  testautomation.c.i  testgamecontroller.c.i  testjoystick.c.i  testtimer.c.i
include/: RTv1.h  color.h  ft_SDL.h  ft_sdl.h  ft_vector.h  point3d.h  render.h  rtv1.h  structs.h
scene/: scene_1.rtv  scene_2.rtv  scene_3.rtv  scene_4.rtv  scene_5.rtv  scene_6.rtv  scene_7.rtv  scene_8.rtv  scene_9.rtv
src/: SDL.c  cam.c  camera.c  color.c  ft_vector.c  hit_objects.c  init_scene.c  light.c  main.c  main.c.old  object.c  objects_normals.c  parse_color.c  parse_double.c  parse_field.c  parse_option.c  parse_point3d.c  parse_scene.c  parse_type.c  point3d.c  raytracer.c  scene.c  scene_manager.c  scene_manager_checklist.c  sdl.c  set_current_parse_element.c
(+75 files in other folders)
