cmake_minimum_required(VERSION 3.14)
project (RTv1)

add_custom_target(make
		COMMAND make
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

include_directories(include libft/include /home/maxdm1993/.brew/include/SDL2
		/home/maxdm1993/.brew/include)

link_directories(/home/maxdm1993/.brew/lib)

add_executable(RTv1
		src/SDL.c src/main.c
		src/init_scene.c
		src/parse_scene.c
		src/scene.c
		src/scene_manager.c
		src/scene_manager_checklist.c
		src/color.c
		include/point3d.h
		src/point3d.c
		src/object.c
		src/light.c
		src/camera.c
		src/parse_type.c
		src/parse_option.c
		src/parse_double.c
		src/parse_point3d.c
		src/parse_color.c
		src/parse_field.c
		src/set_current_parse_element.c)

add_library(ft STATIC
		libft/src/ft_malloc.c
		libft/src/convert_string_array.c
		libft/src/ft_lstmap.c
		libft/src/ft_striteri.c
		libft/src/ft_atolu_base.c
		libft/src/ft_ishex.c
		libft/src/ft_memccpy.c
		libft/src/ft_cdiv.c
		libft/src/ft_atoi_base.c
		libft/src/ft_strncat.c
		libft/src/ft_strmap.c
		libft/src/ft_memset.c
		libft/src/ft_strnstr.c
		libft/src/ft_strdup.c
		libft/src/tview_init.c
		libft/src/ft_strnew.c
		libft/src/ft_astr_del.c
		libft/src/ft_bzero.c
		libft/src/ft_strchr.c
		libft/src/ft_atol_base.c
		libft/src/ft_atou_base.c
		libft/src/tview.c
		libft/src/ft_strput.c
		libft/src/ft_csub.c
		libft/src/get_word_end_pointer.c
		libft/src/ft_toupper.c
		libft/src/ft_bit_edit.c
		libft/src/ft_tpointer_keeper.c
		libft/src/ft_tpointer.c
		libft/src/ft_lstdelone.c
		libft/src/string_array_size.c
		libft/src/memadd.c
		libft/src/ft_atod_ex.c
		libft/src/ft_memcpy.c
		libft/src/ft_strmapi.c
		libft/src/ft_strsub.c
		libft/src/ft_memchr.c
		libft/src/ft_lstnew.c
		libft/src/ft_strnequ.c
		libft/src/ft_atollu_base.c
		libft/src/ft_islower.c
		libft/src/ft_isalpha.c
		libft/src/ft_strlen.c
		libft/src/ft_memmove.c
		libft/src/ft_strcpy.c
		libft/src/ft_putchar.c
		libft/src/new_string.c
		libft/src/join_strings.c
		libft/src/ft_strnlen.c
		libft/src/ft_isascii.c
		libft/src/ft_memcmp.c
		libft/src/ft_astr_new.c
		libft/src/ft_strncmp.c
		libft/src/ft_strrchr.c
		libft/src/ft_strequ.c
		libft/src/ft_strndup.c
		libft/src/ft_astr_put.c
		libft/src/ft_cmul.c
		libft/src/ft_putstr.c
		libft/src/get_next_line.c
		libft/src/get_garbage_collector.c
		libft/src/ft_strclr.c
		libft/src/ft_putendl_fd.c
		libft/src/ft_strnchri.c
		libft/src/ft_bit_mask.c
		libft/src/ft_putchar_fd.c
		libft/src/ft_putstr_fd.c
		libft/src/ft_strjoin.c
		libft/src/ft_atoi.c
		libft/src/ft_astr_fill_c.c
		libft/src/ft_uintlen.c
		libft/src/ft_itoa.c
		libft/src/ft_putnbr_fd.c
		libft/src/ft_write_free.c
		libft/src/parse_float_ex.c
		libft/src/ft_strsplit.c
		libft/src/memfree_all.c
		libft/src/get_word_end_position.c
		libft/src/ft_strncpy.c
		libft/src/ft_isdigit.c
		libft/src/ft_strtrim.c
		libft/src/ft_astr_astr.c
		libft/src/ft_cpowl.c
		libft/src/ft_cadd.c
		libft/src/get_word_start_pointer.c
		libft/src/ft_atox_utils.c
		libft/src/ft_tpointer_keeper_get.c
		libft/src/ft_tpointer_keeper_attr.c
		libft/src/memalloc.c
		libft/src/ft_atoll_base.c
		libft/src/get_word_start_position.c
		libft/src/ft_tpointer_keeper_converter.c
		libft/src/ft_lstiter.c
		libft/src/twin.c
		libft/src/ft_tpointer_destroy.c
		libft/src/ft_strstr.c
		libft/src/ft_isspace.c
		libft/src/ft_atof_ex.c
		libft/src/ft_astr_len.c
		libft/src/cut_string.c
		libft/src/ft_strlenc.c
		libft/src/ft_tolower.c
		libft/src/ft_bit_endian.c
		libft/src/ft_memdel.c
		libft/src/ft_atold_ex.c
		libft/src/ft_astr_tolower.c
		libft/src/ft_lstadd.c
		libft/src/memfree.c
		libft/src/ft_nsym.c
		libft/src/ft_putendl.c
		libft/src/ft_cabsl.c
		libft/src/ft_strcmp.c
		libft/src/ft_isprint.c
		libft/src/ft_wchar_to_string.c
		libft/src/ft_strlcat.c
		libft/src/ft_strdel.c
		libft/src/ft_lstdel.c
		libft/src/destroy_string_array.c
		libft/src/ft_strcat.c
		libft/src/ft_striter.c
		libft/src/ft_putnbr.c
		libft/src/ft_memalloc.c
		libft/src/ft_isupper.c
		libft/src/ft_isalnum.c
		libft/src/parse_integer.c include/ft_SDL.h include/color.h libft/include/ft_stdint.h libft/src/ft_exit.c libft/src/ft_calloc.c libft/src/ft_realloc.c)

target_link_libraries(RTv1 ft "-lSDL2 -L/home/maxdm1993/.brew/lib/ -lm")